# DALN

./: README.md
Hospital/: CMakeLists.txt  doctor.h  instance.h  main.cpp  room.h  solution.h  solver.h
Hospital/data/: AbilityMatrix.csv  AbilityMatrix_1.csv  Doctor_1.csv  JobSchedule.csv  JobSchedule_1.csv  Room_1.csv
Hospital/output/: AbilityDoctorRoom.csv  error.csv  result.csv  schedulePersonal.csv
Hospital_Schedule/: AbilityMatrix.csv  Doctor.csv  Instance.h  JobSchedule.csv  Room.h  Solution.h  Solver.h  main.cpp
Laplich/: AbilityMatrix.csv  CMakeLists.txt  Doctor.csv  JobSchedule.csv  Library.h  Room.csv  Test.csv  main.cpp
